--- a/src/components/Achievement/Achievement.css
+++ b/src/components/Achievement/Achievement.css
@@ -24,12 +24,12 @@
 
 .achievement-body h4 {
     font-size: 1.75rem;
-    font-family: 'Caveat', cursive;
+    font-family: var(--primaryFont);
     font-weight: 400;
 }
 
 .achievement-cards {
-    padding: 2rem;
+    padding: 2rem; 
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -59,14 +59,15 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
-    width: 65%;
+    width: 75%;
    
 }
 
 .achievecard-details2 {
     display: flex;
     flex-direction: row;
-    width: 50%;
+    width: 75%;
+    padding-bottom: 5px;
     align-items: center;
     font-family: var(--primaryFont);
     font-size: 18px;
@@ -76,7 +77,7 @@
 }
 
 .achievecard-details2 h5 {
-   width: 50%;
+   width: 65%;
 }
 
 .achievecard-field {
@@ -92,15 +93,15 @@
 
 .achievecard-details1 h2 {
     font-family: var(--primaryFont);
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.225rem;
     line-height: 110%;
     margin-bottom: 6px;
 }
 
 .achievecard-details1 p {
-    font-size: 1.10rem;
-    font-family: Roboto;
+    font-size: 0.90rem;
+    font-family: var(--primaryFont);
     font-weight: 400;
 }
 
