--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -5,7 +5,7 @@
 .experience-body {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     width: 100%;
 }
@@ -33,7 +33,7 @@
     align-items:flex-start;
     justify-content: flex-start;
     width: 90%;
-    height: 140px;
+    height: auto;
     padding: 1.5rem;
     border-radius: 20px;
     margin-bottom: 1.5rem;
@@ -57,6 +57,7 @@
 
 .experience-details {
     margin-left: 0.6rem;
+    height: auto;
 }
 
 .experience-details > h6 {
